--- a/src/app/views/features/opportunity/opportunity.component.html
+++ b/src/app/views/features/opportunity/opportunity.component.html
@@ -2,31 +2,62 @@
   <div class="col-10">
     <p-card>
       <h2>商機</h2>
-      <div class="flex justify-content-end">
+      <div class="flex flex-row justify-content-start">
+        <div class="flex align-items-center mb-3 ml-4">
+          <span class="text-400 pi pi-circle-fill mr-1"></span>
+          <span>{{stage[0].name}}</span>
+          <span class="text-blue-300 pi pi-circle-fill mr-1 ml-2"></span>
+          <span>{{stage[1].name}}</span>
+          <span class="text-yellow-300 pi pi-circle-fill mr-1 ml-2"></span>
+          <span>{{stage[2].name}}</span>
+          <span class="text-orange-300 pi pi-circle-fill mr-1 ml-2"></span>
+          <span>{{stage[3].name}}</span>
+          <span class="text-green-300 pi pi-circle-fill mr-1 ml-2"></span>
+          <span>{{stage[4].name}}</span>
+        </div>
+        <div class="flex ml-auto mr-2">
         <span class="p-buttonset">
-          <p-button (click)="showDialog('add')" label="新增商機" icon="pi pi-plus" styleClass="p-button-text"></p-button>
+          <p-button (click)="showDialog('add')" pTooltip="新增商機" tooltipPosition="top" icon="pi pi-plus"
+                    styleClass="p-button-text"></p-button>
         </span>
+        </div>
       </div>
       <p-table [value]="opportunity">
         <ng-template pTemplate="header">
           <tr>
-            <th>商機名稱</th>
-            <th>帳戶名稱</th>
-            <th>階段</th>
-            <th>結束日期</th>
-            <th>業務負責人</th>
-            <th>編輯</th>
+            <th pSortableColumn="stage">狀態<p-sortIcon field="stage"></p-sortIcon></th>
+            <th pSortableColumn="name">商機名稱<p-sortIcon field="name"></p-sortIcon></th>
+            <th pSortableColumn="account_name">帳戶<p-sortIcon field="account_name"></p-sortIcon></th>
+            <th pSortableColumn="close_date">結束日期<p-sortIcon field="close_date"></p-sortIcon></th>
+            <th pSortableColumn="owner">業務員<p-sortIcon field="owner"></p-sortIcon></th>
+            <th></th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-opportunity>
           <tr>
-            <td>{{ opportunity.opportunity_name }}</td>
+            <td><span pTooltip={{opportunity.stage}} tooltipPosition="top" [ngClass]="{
+                'text-400': opportunity.stage === stage[0].name,
+                'text-blue-300': opportunity.stage === stage[1].name,
+                'text-yellow-300': opportunity.stage === stage[2].name,
+                'text-orange-300': opportunity.stage === stage[3].name,
+                'text-green-300': opportunity.stage === stage[4].name
+            }" class="pi pi-circle-fill ml-2"></span>
+            </td>
+            <td>{{ opportunity.name }}</td>
             <td>{{ opportunity.account_name }}</td>
-            <td>{{ opportunity.stage }}</td>
             <td>{{ opportunity.close_date }}</td>
-            <td>{{ opportunity.opportunity_owner }}</td>
-            <td><p-button (click)="showDialog('edit',opportunity)" icon="pi pi-pencil"
-                styleClass="p-button-rounded p-button-secondary p-button-outlined"></p-button></td>
+            <td>{{ opportunity.owner }}</td>
+            <td>
+              <div class="flex justify-content-end">
+                <p-button icon="pi pi-eye" routerLink="/main/opportunity/view" pTooltip="檢視" tooltipPosition="top"
+                          styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+                <p-button (click)="showDialog('edit',opportunity)" icon="pi pi-pencil" pTooltip="編輯"
+                          tooltipPosition="top"
+                          styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+                <p-button icon="pi pi-trash" pTooltip="刪除" tooltipPosition="top"
+                          styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+              </div>
+            </td>
           </tr>
         </ng-template>
       </p-table>
@@ -34,45 +65,70 @@
   </div>
 </div>
 <form [formGroup]="opportunity_form">
-  <p-dialog [(visible)]="edit" header={{dialogHeader}}>
+  <p-dialog [(visible)]="edit" header={{dialogHeader}} [modal]="true">
     <div class="grid">
       <div class="col-6">
         <div class="field">
-          <label>商機名稱</label>
-          <input pInputText formControlName="opportunity_name">
+          <label><span class="text-red-600">*</span>商機名稱</label>
+          <input pInputText formControlName="name"
+                 [ngClass]="{'ng-dirty':opportunity_form.controls['name'].hasError && opportunity_form.controls['name'].touched}">
         </div>
       </div>
       <div class="col-6">
         <div class="field">
-          <label>客戶名稱</label>
-          <input pInputText formControlName="account_name">
+          <label><span class="text-red-600">*</span>帳戶</label>
+          <p-dropdown [options]="account" (onChange)="accountValue($event)" optionLabel="name" [filter]="true"
+                      formControlName="account_name"
+                      [ngClass]="{'ng-dirty':opportunity_form.controls['account_name'].hasError && opportunity_form.controls['account_name'].touched}"
+                      filterBy="name" [showClear]="true" placeholder="選擇現有帳戶">
+            <ng-template pTemplate="account">
+              <div class="flex align-items-center gap-2" *ngIf="account">
+                <div>{{ account.name }}</div>
+              </div>
+            </ng-template>
+            <ng-template let-account pTemplate="item">
+              <div class="flex align-items-center gap-2">
+                <div>{{ account.name }}</div>
+              </div>
+            </ng-template>
+          </p-dropdown>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
-          <label>階段</label>
-          <p-dropdown placeholder="請選擇" [disabled]="true" [options]="stage" optionLabel="name"
-            (onChange)="stageValue($event)" formControlName="stage" appendTo="body"></p-dropdown>
+          <label><span class="text-red-600">*</span>階段</label>
+          <p-dropdown [disabled]="true" [options]="stage" optionLabel="name"
+                      (onChange)="stageValue($event)" formControlName="stage" appendTo="body"
+                      [ngClass]="{'ng-dirty':opportunity_form.controls['stage'].hasError && opportunity_form.controls['stage'].touched}"></p-dropdown>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
-          <label>預測種類</label>
+          <label><span class="text-red-600">*</span>預測種類</label>
           <p-dropdown placeholder="請選擇" [disabled]="true" [options]="forecast_category" optionLabel="name"
-            (onChange)="forecast_categoryValue($event)" formControlName="forecast_category"
-            appendTo="body"></p-dropdown>
+                      (onChange)="forecast_categoryValue($event)" formControlName="forecast_category"
+                      appendTo="body"
+                      [ngClass]="{'ng-dirty':opportunity_form.controls['forecast_category'].hasError && opportunity_form.controls['forecast_category'].touched}"></p-dropdown>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
-          <label>結束日期</label>
-          <input pInputText formControlName="close_date">
+          <label><span class="text-red-600">*</span>結束日期</label>
+          <p-calendar formControlName="close_date" appendTo="body"
+                      [ngClass]="{'ng-dirty':opportunity_form.controls['close_date'].hasError && opportunity_form.controls['close_date'].touched}"></p-calendar>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
-          <label>業務負責人</label>
-          <input pInputText formControlName="opportunity_owner">
+          <label>金額</label>
+          <input pInputText formControlName="amount">
+        </div>
+      </div>
+      <div class="col-6">
+        <div class="field">
+          <label>業務員</label>
+          <br>
+          <label>{{(opportunity_form.controls['owner'].value)}}</label>
         </div>
       </div>
     </div>
