--- a/src/app/views/features/contact/contact.component.html
+++ b/src/app/views/features/contact/contact.component.html
@@ -51,7 +51,7 @@
   </div>
 </div>
 <form [formGroup]="contact_form">
-  <p-dialog [(visible)]="edit" header={{dialogHeader}}>
+  <p-dialog [(visible)]="edit" header={{dialogHeader}} [modal]="true">
     <div class="grid">
       <div class="col-6">
         <div class="field">
