--- a/src/app/views/features/contract/contract.component.html
+++ b/src/app/views/features/contract/contract.component.html
@@ -12,7 +12,7 @@
         <ng-template pTemplate="caption">
           <div class="flex">
             <span class="p-input-icon-left ml-auto">
-              <td><input type="text" [(ngModel)]="filterText" (input)="filtercontracts()" pInputText
+              <td><input type="text" [(ngModel)]="filterText" (input)="filterContracts()" pInputText
                   placeholder="輸入關鍵字"></td>
             </span>
           </div>
