--- a/src/app/views/features/order/order.component.html
+++ b/src/app/views/features/order/order.component.html
@@ -7,44 +7,54 @@
           <p-button (click)="showDialog('add')" icon="pi pi-plus" styleClass="p-button-text"></p-button>
         </span>
       </div>
-      <p-table [rowsPerPageOptions]="[5, 10, 15]" [value]="filteredOrders" [paginator]="true" [rows]="5" [totalRecords]="100" [currentPageReportTemplate]="'Showing {first} to {last} of {totalRecords} entries'">
+      <p-table [rowsPerPageOptions]="[5, 10, 15]" [(first)]="first" [showCurrentPageReport]="true"
+               [loading]="loading" [globalFilterFields]="['status','start_date']" (onLazyLoad)="loadTable($event)"
+               [value]="GetAllOrder" [paginator]="true" [rows]="5" [lazy]="true" [totalRecords]="totalRecords"
+               currentPageReportTemplate="從 {first} 到 {last} 筆，共 {totalRecords} 筆">
         <ng-template pTemplate="caption">
           <div class="flex">
             <span class="p-input-icon-left ml-auto">
-              <td><input type="text" [(ngModel)]="filterText" (input)="filterorders()" pInputText
-                  placeholder="輸入關鍵字"></td>
+              <td><input type="text" (input)="filterorders()" [(ngModel)]="searchTerm" pInputText
+                         placeholder="輸入關鍵字"></td>
             </span>
           </div>
         </ng-template>
         <ng-template pTemplate="header">
           <tr>
-            <th pSortableColumn="number">號碼<p-sortIcon field="number"></p-sortIcon></th>
-            <th pSortableColumn="account_name">帳戶名稱<p-sortIcon field="account_name"></p-sortIcon></th>
-            <th pSortableColumn="order_amount">訂單金額<p-sortIcon field="order_amount"></p-sortIcon></th>
-            <th pSortableColumn="start_date">訂單開始日期<p-sortIcon field="start_date"></p-sortIcon></th>
-            <th pSortableColumn="status">狀態<p-sortIcon field="status"></p-sortIcon></th>
-            <th pSortableColumn="contract_number">契約號碼<p-sortIcon field="contract_number"></p-sortIcon></th>
+            <th pSortableColumn="number">號碼
+              <p-sortIcon field="number"></p-sortIcon>
+            </th>
+            <th pSortableColumn="account_id">帳戶
+              <p-sortIcon field="account_id"></p-sortIcon>
+            </th>
+            <!--            <th pSortableColumn="amount">訂單金額<p-sortIcon field="amount"></p-sortIcon></th>-->
+            <th pSortableColumn="start_date">訂單開始日期
+              <p-sortIcon field="start_date"></p-sortIcon>
+            </th>
+            <th pSortableColumn="status">狀態
+              <p-sortIcon field="status"></p-sortIcon>
+            </th>
+            <th pSortableColumn="contract_number">契約號碼
+              <p-sortIcon field="contract_number"></p-sortIcon>
+            </th>
             <th></th>
           </tr>
         </ng-template>
         <ng-template pTemplate="body" let-order>
           <tr>
-            <td>{{ order.number }}</td>
-            <td>{{ order.account_name }}</td>
-            <td>{{ order.order_amount }}</td>
+            <td>{{ order.code }}</td>
+            <td>{{ order.account_id }}</td>
+            <!--            <td>{{ order.amount }}</td>-->
             <td>{{ order.start_date }}</td>
             <td>{{ order.status }}</td>
             <td>{{ order.contract_number }}</td>
-            <td class="icon-align-right"><p-button icon="pi pi-eye" styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+            <td class="icon-align-right">
+              <p-button icon="pi pi-eye" styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
               <p-button (click)="showDialog('edit',order)" icon="pi pi-pencil"
-                styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
-                <p-button icon="pi pi-trash"
-                styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+                        styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
+              <p-button icon="pi pi-trash"
+                        styleClass="p-button-rounded p-button-secondary p-button-text"></p-button>
             </td>
-            <!-- <td><p-button (click)="showDialog('edit',order)" icon="pi pi-pencil"
-                styleClass="p-button-rounded p-button-secondary p-button-outlined"></p-button></td>
-            <td><p-button icon="pi pi-trash"
-                styleClass="p-button-rounded p-button-secondary p-button-outlined"></p-button></td> -->
           </tr>
         </ng-template>
       </p-table>
@@ -58,29 +68,29 @@
         <div class="field">
           <label>訂單號碼</label>
           <br>
-          <label class="mt-2 ml-2 disable">{{(order_form.controls['number'].value)}}</label>
+          <label class="mt-2 ml-2 disable">{{(order_form.controls['code'].value)}}</label>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
           <label><span class="required-star">*</span>契約號碼</label>
-          <p-dropdown placeholder="搜尋契約" [disabled]="true" optionLabel="name" formControlName="contract_number"
-            appendTo="body"
-            [ngClass]="{'ng-dirty':order_form.controls['contract_number'].hasError && order_form.controls['contract_number'].touched}"></p-dropdown>
+          <p-dropdown placeholder="搜尋契約" [disabled]="true" optionLabel="name" formControlName="contract_code"
+                      appendTo="body"
+                      [ngClass]="{'ng-dirty':order_form.controls['contract_code'].hasError && order_form.controls['contract_code'].touched}"></p-dropdown>
         </div>
       </div>
       <div class="col-6">
         <div class="field">
           <label><span class="required-star">*</span>帳戶名稱</label>
-          <input pInputText formControlName="account_name"
-            [ngClass]="{'ng-dirty':order_form.controls['account_name'].hasError && order_form.controls['account_name'].touched}">
+          <input pInputText formControlName="account_id"
+                 [ngClass]="{'ng-dirty':order_form.controls['account_id'].hasError && order_form.controls['account_id'].touched}">
         </div>
       </div>
       <div class="col-6">
         <div class="field">
           <label><span class="required-star">*</span>訂單開始日期</label>
           <p-calendar [appendTo]="'body'" dateFormat="yy-mm-dd" [showButtonBar]="true" formControlName="start_date"
-            [ngClass]="{'ng-dirty':order_form.controls['start_date'].hasError && order_form.controls['start_date'].touched}"></p-calendar>
+                      [ngClass]="{'ng-dirty':order_form.controls['start_date'].hasError && order_form.controls['start_date'].touched}"></p-calendar>
         </div>
       </div>
       <div class="col-6" *ngIf="!showedit">
@@ -94,15 +104,15 @@
         <div class="field">
           <label><span class="required-star">*</span>狀態</label>
           <p-dropdown placeholder="請選擇" [disabled]="true" appendTo="body" [options]="status" formControlName="status"
-            optionLabel="name" (onChange)="onStatusChange($event)" [(ngModel)]="selectedStatus"
-            [ngClass]="{'ng-dirty':order_form.controls['status'].hasError && order_form.controls['status'].touched}"></p-dropdown>
+                      optionLabel="name" (onChange)="onStatusChange($event)" [(ngModel)]="selectedStatus"
+                      [ngClass]="{'ng-dirty':order_form.controls['status'].hasError && order_form.controls['status'].touched}"></p-dropdown>
         </div>
       </div>
       <div class="col-6" *ngIf="showedit">
         <div class="field">
           <label>訂單金額</label>
           <br>
-          <label class="mt-2 ml-2" [textContent]="order_form.controls['order_amount'].value"></label>
+          <label class="mt-2 ml-2" [textContent]="order_form.controls['amount'].value"></label>
         </div>
       </div>
       <div class="col-6"></div>
@@ -116,7 +126,8 @@
         <div class="col-6">
           <div class="field">
             <label>啟用者</label>
-            <input pInputText formControlName="activated_by">
+            <br>
+            <label>{{(order_form.controls['activated_by'].value)}}</label>
           </div>
         </div>
       </ng-container>
@@ -124,7 +135,8 @@
         <div class="col-6">
           <div class="field">
             <label>啟用日期</label>
-            <input pInputText formControlName="activated_date">
+            <br>
+            <label>{{(order_form.controls['activated_date'].value)}}</label>
           </div>
         </div>
       </ng-container>
@@ -140,8 +152,8 @@
         <label>上次修改者：</label>
         <br>
         <div class="mt-3 field">
-        <label class="disable">{{(order_form.controls['updated_by'].value)}}</label>
-        <label class="ml-2 disable">{{(order_form.controls['updated_at'].value)}}</label>
+          <label class="disable">{{(order_form.controls['updated_by'].value)}}</label>
+          <label class="ml-2 disable">{{(order_form.controls['updated_at'].value)}}</label>
         </div>
       </div>
     </div>
